[gd_scene format=3 uid="uid://dy7n17gef32m8"]

[ext_resource type="FontFile" uid="uid://gdelwc207xyq" path="res://fonts/Jacquard_font.tres" id="1_fchgr"]
[ext_resource type="Script" uid="uid://drpye0abp1xe0" path="res://scripts/create_world_sect.gd" id="1_s0unq"]
[ext_resource type="FontFile" uid="uid://bbmspah8tojot" path="res://fonts/Alkhemikal_font.tres" id="2_s0unq"]

[node name="create_world_sect" type="Control" unique_id=1242943887]
visible = false
custom_minimum_size = Vector2(300, 300)
layout_mode = 3
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -20.0
offset_top = -20.0
offset_right = 20.0
offset_bottom = 20.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_s0unq")

[node name="create_world_label" type="Label" parent="." unique_id=1179990585]
layout_mode = 1
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -87.5
offset_right = 87.5
offset_bottom = 21.0
grow_horizontal = 2
theme_override_constants/outline_size = 4
theme_override_fonts/font = ExtResource("1_fchgr")
theme_override_font_sizes/font_size = 25
text = "Create world"
horizontal_alignment = 1

[node name="MarginContainer" type="MarginContainer" parent="." unique_id=243248402]
layout_mode = 1
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -87.5
offset_right = 87.5
offset_bottom = 77.0
grow_horizontal = 2
theme_override_constants/margin_top = 50

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer" unique_id=1236341060]
layout_mode = 2
theme_override_constants/separation = 2

[node name="name_label" type="Label" parent="MarginContainer/VBoxContainer" unique_id=741654661]
layout_mode = 2
theme_override_constants/outline_size = 4
theme_override_fonts/font = ExtResource("2_s0unq")
theme_override_font_sizes/font_size = 15
text = "World Name"

[node name="name_edit" type="LineEdit" parent="MarginContainer/VBoxContainer" unique_id=1762204516]
custom_minimum_size = Vector2(200, 0)
layout_mode = 2
theme_override_fonts/font = ExtResource("2_s0unq")
max_length = 32
context_menu_enabled = false
emoji_menu_enabled = false

[node name="seed_label" type="Label" parent="MarginContainer/VBoxContainer" unique_id=164679673]
layout_mode = 2
theme_override_constants/outline_size = 4
theme_override_fonts/font = ExtResource("2_s0unq")
theme_override_font_sizes/font_size = 15
text = "World Seed"

[node name="seed_edit" type="LineEdit" parent="MarginContainer/VBoxContainer" unique_id=1100750514]
layout_mode = 2
theme_override_fonts/font = ExtResource("2_s0unq")
placeholder_text = "Leave blank for a random seed"
max_length = 64

[node name="MarginContainer" type="MarginContainer" parent="MarginContainer/VBoxContainer" unique_id=1637247753]
layout_mode = 2
theme_override_constants/margin_top = 15

[node name="difficulty_button" type="Button" parent="MarginContainer/VBoxContainer/MarginContainer" unique_id=1981797484]
custom_minimum_size = Vector2(150, 20)
layout_mode = 2
size_flags_horizontal = 4
theme_override_fonts/font = ExtResource("2_s0unq")
text = "Difficulty: Easy"

[node name="HBoxContainer" type="HBoxContainer" parent="." unique_id=662324686]
layout_mode = 1
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -127.0
offset_top = -40.0
offset_right = 127.0
grow_horizontal = 2
grow_vertical = 0

[node name="return_button" type="Button" parent="HBoxContainer" unique_id=1513847915]
custom_minimum_size = Vector2(125, 25)
layout_mode = 2
size_flags_horizontal = 8
size_flags_vertical = 4
theme_override_constants/outline_size = 4
theme_override_fonts/font = ExtResource("2_s0unq")
text = "Return"

[node name="create_button" type="Button" parent="HBoxContainer" unique_id=925407941]
custom_minimum_size = Vector2(125, 25)
layout_mode = 2
size_flags_horizontal = 8
size_flags_vertical = 4
theme_override_colors/font_disabled_color = Color(0.84313726, 0.84313726, 0.84313726, 0.84313726)
theme_override_constants/outline_size = 4
theme_override_fonts/font = ExtResource("2_s0unq")
disabled = true
text = "Create New World"

[connection signal="text_changed" from="MarginContainer/VBoxContainer/name_edit" to="." method="_on_name_edit_text_changed"]
[connection signal="visibility_changed" from="MarginContainer/VBoxContainer/name_edit" to="." method="_on_name_edit_visibility_changed"]
[connection signal="visibility_changed" from="MarginContainer/VBoxContainer/seed_edit" to="." method="_on_seed_edit_visibility_changed"]
[connection signal="pressed" from="MarginContainer/VBoxContainer/MarginContainer/difficulty_button" to="." method="_on_difficulty_button_pressed"]
[connection signal="pressed" from="HBoxContainer/return_button" to="." method="_on_return_button_pressed"]
[connection signal="pressed" from="HBoxContainer/create_button" to="." method="_on_create_button_pressed"]
